--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -188,7 +188,7 @@ Anthropologie:
     - start: 408
     - start: 115
     - start: 283
-    GA 80:
+    GA 80.1:
     - start: 215
       suffix: ff
     GA 96:
@@ -760,6 +760,8 @@ DK 12 B1:
     - start: 175
     GA 45:
     - start: 136
+    GA 80.2:
+    - start: 684
   related:
   - δίκη
   type: w
@@ -800,6 +802,10 @@ DK 22 B1:
   related:
   - λόγος
   type: w
+DK 22 B10:
+  references:
+    GA 91:
+    - start: 223
 DK 22 B104:
   author: Heraklit
   metadata:
@@ -848,6 +854,22 @@ DK 22 B123:
     - end: 131
       start: 109
     - start: 134
+      suffix: f
+    GA 80.1:
+    - start: 460
+    - start: 481
+    GA 80.2:
+    - start: 604
+    - start: 686
+      suffix: f
+    - start: 1306
+      suffix: f
+    - start: 1324
+    - start: 1341
+      suffix: f
+    GA 91:
+    - start: 486
+    - start: 515
       suffix: f
     WBPh:
     - start: 298
@@ -963,6 +985,8 @@ DK 22 B35:
   references:
     GA 55:
     - start: 128
+    GA 80.2:
+    - start: 842
   type: w
 DK 22 B37:
   author: Heraklit
@@ -1021,6 +1045,12 @@ DK 22 B53:
     EM:
     - start: 66
     - start: 121
+    GA 80.2:
+    - start: 601
+    - start: 694
+    GA 91:
+    - start: 196
+    - start: 223
   related:
   - πόλεμος
   type: w
@@ -1074,6 +1104,8 @@ DK 22 B8:
     - start: 140
     GA 55:
     - start: 145
+    GA 91:
+    - start: 223
   type: w
 DK 22 B80:
   author: Heraklit
@@ -1093,6 +1125,10 @@ DK 22 B87:
     GA 55:
     - start: 150
   type: w
+DK 22 B88:
+  references:
+    GA 91:
+    - start: 223
 DK 22 B9:
   author: Heraklit
   metadata:
@@ -1113,6 +1149,8 @@ DK 22 B93:
     - start: 40
     GA 55:
     - start: 18
+    GA 91:
+    - start: 185
     WBPh:
     - start: 277
   type: w
@@ -1184,6 +1222,18 @@ DK 28 B3:
     GA 40:
     - start: 145
       suffix: ff
+    GA 80.2:
+    - start: 703
+    - start: 750
+    - end: 815
+      start: 791
+    - start: 972
+    GA 91:
+    - start: 225
+    - start: 427
+    - start: 487f
+    - start: 624
+    - start: 689
     GA 98:
     - start: 169
     GA 99:
@@ -1228,6 +1278,12 @@ DK 28 B8 34:
   references:
     GA 40:
     - start: 147
+  type: w
+DK 28 B8 34-36:
+  parent: DK 28 B8
+  references:
+    GA 80.2:
+    - start: 799
   type: w
 DK 28 B8 34-41:
   parent: DK 28 B8
@@ -1503,6 +1559,13 @@ Der Sommerabend:
     - end: 504
       start: 502
   type: w
+Der Spruch des Protagoras:
+  references:
+    GA 80.2:
+    - end: 775
+      start: 767
+  related:
+  - Protagoras
 Der Untergang des Abendlandes:
   author: Spengler, Oswald
   metadata:
@@ -1569,6 +1632,9 @@ Descartes, René:
     - end: 84
       start: 82
     - start: 305
+    GA 80.2:
+    - end: 775
+      start: 767
     SvG:
     - start: 174
     - start: 18
@@ -1832,6 +1898,9 @@ Erstaunen:
     - end: 180
       start: 177
     - start: 195
+    GA 80.2:
+    - start: 783
+      suffix: f
     VA:
     - start: 266
     - start: 286
@@ -3992,6 +4061,11 @@ Problem der menschlichen Freiheit:
   references:
     GA 29/30:
     - start: 429
+Protagoras:
+  references:
+    GA 80.2:
+    - start: 767
+  type: p
 Psychische:
   references:
     EM:
@@ -4177,6 +4251,8 @@ Satz vom Grund:
   - Satz vom augeschlossenen Dritten
 Satz vom Widerspruch:
   references:
+    GA 91:
+    - start: 318
     SvG:
     - start: 23
 Satz vom augeschlossenen Dritten:
@@ -4465,6 +4541,9 @@ Sophistes:
     EM:
     - end: 62
       start: 61
+    GA 80.2:
+    - end: 770
+      start: 767
   type: w
 Sophokles:
   metadata:
@@ -4858,6 +4937,8 @@ Tod:
     - start: 275
 Tonart:
   references:
+    GA 91:
+    - start: 597
     SvG:
     - start: 166
 Tragödie:
@@ -5116,6 +5197,8 @@ Verwindung der Metaphysik:
     GA 102:
     - start: 285
     - start: 351
+    GA 91:
+    - start: 651
 Verwunderung:
   references:
     WiM:
@@ -6166,6 +6249,8 @@ wesentliche Möglichkeit des Seins:
     GA 102:
     - start: 160
     - start: 285
+    GA 91:
+    - start: 651
     GA 98:
     - start: 369
   related:
@@ -6352,6 +6437,9 @@ wesentliche Möglichkeit des Seins:
     - start: 84
     GA 55:
     - start: 12
+    GA 80.2:
+    - start: 783
+      suffix: f
 θέσις:
   lang: grc
   references:
@@ -6538,7 +6626,16 @@ wesentliche Möglichkeit des Seins:
   references:
     WBPh:
     - start: 269
+μέτρον:
+  lang: grc
+  references:
+    GA 80.2:
+    - start: 767
+      suffix: ff
+    - start: 773
+    - start: 775
 νοεῖν:
+  lang: grc
   references:
     GA 45:
     - start: 139
@@ -6590,6 +6687,7 @@ wesentliche Möglichkeit des Seins:
     WBPh:
     - start: 288
 περὶ φύσεως:
+  lang: grc
   references:
     GA 54:
     - start: 207
@@ -6650,6 +6748,8 @@ wesentliche Möglichkeit des Seins:
     - start: 64
     GA 101:
     - start: 82
+    GA 80.2:
+    - start: 802
   related:
   - Heraklit
 πόλεμος:
@@ -6733,13 +6833,17 @@ wesentliche Möglichkeit des Seins:
 τόπος:
   lang: grc
   references:
+    GA 91:
+    - start: 374
     WBPh:
     - start: 246
-φυσικά:
+φυσικός:
   lang: grc
   references:
     GA 29/30:
     - start: 38
+    GA 91:
+    - start: 53
 φυσιολόγοι:
   lang: grc
   references:
@@ -6780,6 +6884,9 @@ wesentliche Möglichkeit des Seins:
     - start: 38
     GA 54:
     - start: 209
+    GA 91:
+    - start: 51
+    - start: 475
 φύσει ὄντα:
   lang: grc
   parent: φύσις
@@ -7145,6 +7252,7 @@ wesentliche Möglichkeit des Seins:
     - start: 258
       suffix: f
 ὑπόθεσις:
+  lang: grc
   references:
     SvG:
     - start: 24
