Fix: typo in DK 28 B3 refs

--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -1231,7 +1231,8 @@ DK 28 B3:
     GA 91:
     - start: 225
     - start: 427
-    - start: 487f
+    - start: 487
+      suffix: f
     - start: 624
     - start: 689
     GA 98:
