Add φυσικός to related terms of φύσις

--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -7016,6 +7016,7 @@ wesentliche Möglichkeit des Seins:
     - end: 278
       start: 277
   related:
+  - φυσικός
   - φύειν
   - Physica
   - Natur
