Add some refs for TK

--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -2078,6 +2078,15 @@ Ganze des Seienden:
       type: r
   related:
   - Seiende im Ganzen
+Ge-stell:
+  references:
+    TK:
+    - start: 19
+      suffix: f
+    - end: 33
+      start: 23
+  related:
+  - Gestell
 Gebrochenheit des Daseins:
   references:
     GA 29/30:
@@ -2163,6 +2172,14 @@ Genesis 1. 26 (LXX):
     - start: 22
     - start: 28
   type: w
+Gepenst an der Kanderer Straße:
+  author: Hebel, Johann Peter
+  metadata:
+    zeno: '20005018773'
+  references:
+    TK:
+    - start: 30
+  type: w
 Gerede:
   references:
     GA 29/30:
@@ -2199,6 +2216,9 @@ Geschick:
     SvG:
     - start: 163
     - start: 169
+    TK:
+    - end: 28
+      start: 24
     VA:
     - start: 25
       suffix: ff
@@ -3819,6 +3839,9 @@ Pascal, Blaise:
     Sch:
     - start: 54
   type: p
+Patmos:
+  author: Hölderlin, Friedrich
+  type: w
 Paulus:
   metadata:
     gnd: '118641549'
@@ -5107,6 +5130,13 @@ Unverborgenheit:
     - start: 109
     SvG:
     - start: 159
+    TK:
+    - start: 20
+    - end: 18
+      start: 17
+    - end: 26
+      start: 25
+    - start: 27
     WBPh:
     - start: 268
     - start: 271
@@ -5607,6 +5637,14 @@ Wissenschaftslehre:
     GA 29/30:
     - start: 83
   type: w
+Wo aber Gefahr ist, wächst / Das Rettende auch.:
+  parent: Patmos
+  references:
+    TK:
+    - start: 28
+    - start: 35
+    - start: 41
+  type: w
 Wohnen:
   references:
     HF:
@@ -5851,6 +5889,7 @@ das Wahre:
   references:
     TK:
     - start: 7
+    - start: 21
 der Feldberg:
   references:
     GA 55:
@@ -5882,6 +5921,8 @@ dichterisch wohnet der Mensch auf dieser Erde:
     - whole: true
     HF:
     - start: 147
+    TK:
+    - start: 35
 dürftiger Zeit:
   references:
     WD:
