Add `Gepenst an der …` as child of `Allemannische …`

--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -2176,6 +2176,7 @@ Gepenst an der Kanderer Straße:
   author: Hebel, Johann Peter
   metadata:
     zeno: '20005018773'
+  parent: Allemannische Gedichte
   references:
     TK:
     - start: 30
