--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -1854,7 +1854,7 @@ Erde:
     SvG:
     - start: 189
   related:
-  - Theologische Schriften 3, Gebet 3
+  - Theologische Schriften 3, Ideen zur Gebetstheorie 3
 Ergriffenheit:
   references:
     GA 29/30:
@@ -2670,7 +2670,7 @@ Himmel:
     - end: 532
       start: 530
   related:
-  - Theologische Schriften 3, Gebet 3
+  - Theologische Schriften 3, Ideen zur Gebetstheorie 3
   - Äther
 Himmlischen:
   references:
@@ -4859,8 +4859,12 @@ Technologie:
   references:
     SvG:
     - start: 179
-Theologische Schriften 3, Gebet 3:
+Theologische Schriften:
   author: Hebel, Johann Peter
+  type: w
+Theologische Schriften 3, Ideen zur Gebetstheorie 3:
+  author: Hebel, Johann Peter
+  parent: Theologische Schriften
   references:
     G:
     - start: 521
@@ -6297,7 +6301,7 @@ wesentliche Möglichkeit des Seins:
     JPH G:
     - start: 530
   related:
-  - Theologische Schriften 3, Gebet 3
+  - Theologische Schriften 3, Ideen zur Gebetstheorie 3
 Ödipus:
   metadata:
     gnd: '118589393'
