--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -70,7 +70,19 @@ Aias, v. 646f.:
   type: w
 Alemannische Gedichte:
   author: Hebel, Johann Peter
+  metadata:
+    zeno: '20005018617'
   references:
+    GA 97:
+    - start: 215
+    HF:
+    - start: 134
+      suffix: f
+    - start: 137
+      suffix: f
+    JPH G:
+    - start: 532
+      suffix: f
     GA 13:
     - end: 125
       start: 123
@@ -86,23 +98,7 @@ Alemannische Gedichte (Rezension):
     JPH G:
     - start: 532
   related:
-  - Allemannische Gedichte
-  type: w
-Allemannische Gedichte:
-  author: Hebel, Johann Peter
-  metadata:
-    zeno: '20005018617'
-  references:
-    GA 97:
-    - start: 215
-    HF:
-    - start: 134
-      suffix: f
-    - start: 137
-      suffix: f
-    JPH G:
-    - start: 532
-      suffix: f
+  - Alemannische Gedichte
   type: w
 Allgemeine Betrachtung über das Weltgebäude:
   metadata:
@@ -1328,7 +1324,7 @@ Das Gewitter:
   author: Hebel, Johann Peter
   metadata:
     zeno: '20005019036'
-  parent: Allemannische Gedichte
+  parent: Alemannische Gedichte
   references:
     JPH Z:
     - end: 511
@@ -1338,7 +1334,7 @@ Das Habermus:
   author: Hebel, Johann Peter
   metadata:
     zeno: '20005018838'
-  parent: Allemannische Gedichte
+  parent: Alemannische Gedichte
   references:
     HF:
     - start: 145
@@ -1550,7 +1546,7 @@ Der Sommerabend:
   author: Hebel, Johann Peter
   metadata:
     zeno: '20005018730'
-  parent: Allemannische Gedichte
+  parent: Alemannische Gedichte
   references:
     HF:
     - start: 145
@@ -1682,7 +1678,7 @@ Die Vergänglichkeit:
   author: Hebel, Johann Peter
   metadata:
     zeno: '20005018919'
-  parent: Allemannische Gedichte
+  parent: Alemannische Gedichte
   references:
     JPH Z:
     - end: 509
@@ -1692,7 +1688,7 @@ Die Wiese:
   author: Hebel, Johann Peter
   metadata:
     zeno: '20005018641'
-  parent: Allemannische Gedichte
+  parent: Alemannische Gedichte
   references:
     GA 101:
     - start: 163
@@ -2176,7 +2172,7 @@ Gepenst an der Kanderer Straße:
   author: Hebel, Johann Peter
   metadata:
     zeno: '20005018773'
-  parent: Allemannische Gedichte
+  parent: Alemannische Gedichte
   references:
     TK:
     - start: 30
@@ -4863,7 +4859,6 @@ Theologische Schriften:
   author: Hebel, Johann Peter
   type: w
 Theologische Schriften 3, Ideen zur Gebetstheorie 3:
-  author: Hebel, Johann Peter
   parent: Theologische Schriften
   references:
     G:
