Add several relations to lemmata from GA 29/30

--- a/index/heidegger-index.yml
+++ b/index/heidegger-index.yml
@@ -547,6 +547,8 @@ Benommenheit:
     - start: 376
       suffix: ff
     - start: 396
+  related:
+  - Benehmen
 Benommenheit, Offenheit der:
   parent: Benommenheit
   references:
@@ -674,6 +676,7 @@ Biologie:
   - Mechanizismus
   - Vitalismus
 Blick der Entschlossenheit:
+  parent: Entschlossenheit
   references:
     GA 29/30:
     - start: 251
@@ -1800,6 +1803,8 @@ Endlichkeit des Daseins:
   references:
     GA 29/30:
     - start: 252
+  related:
+  - Endlichkeit
 Energie:
   references:
     SvG:
@@ -2612,6 +2617,9 @@ Heimweh:
       start: 10
     - start: 33
     - start: 28
+  related:
+  - Stimmung
+  - Philosophie
 Her-vor-bringen:
   references:
     TK:
@@ -2991,6 +2999,7 @@ Kopernikus:
     - start: 144
   type: p
 Kreisbewegung der Philosophie:
+  parent: Philosophie
   references:
     GA 29/30:
     - end: 267
@@ -3129,6 +3138,7 @@ Leere:
     GA 29/30:
     - start: 367
 Leere im Ganzen:
+  parent: Leere
   references:
     GA 29/30:
     - start: 251
@@ -3309,7 +3319,11 @@ Mensch:
     - start: 285
     WiM:
     - start: 122
+  related:
+  - Dasein des Menschen
+  - Dasein im Menschen
 Mensch qua Mensch:
+  parent: Mensch
   references:
     GA 29/30:
     - start: 414
@@ -3463,13 +3477,16 @@ Möglichkeit:
   references:
     Vorarb29/30:
     - start: 6
-Möglichkeit der λόγος:
+Möglichkeit der λόγος:
+  parent: λόγος
   references:
     GA 29/30:
     - end: 487
       start: 485
     - start: 489
       suffix: f
+  related:
+  - Möglichkeit
 Müller, Johannes:
   metadata:
     gnd: '118585053'
@@ -3763,6 +3780,8 @@ Offenbarkeit des Seienden im Ganze:
     - end: 413
       start: 412
     - start: 415
+  related:
+  - Offenbarkeit des Seienden
 Offene:
   references:
     WD:
@@ -3770,6 +3789,7 @@ Offene:
     - start: 284
     - start: 285
 Offenheit der Benommenheit:
+  parent: Benommenheit
   references:
     GA 29/30:
     - start: 377
@@ -4159,6 +4179,7 @@ Pythischen Oden:
     urn: urn:cts:greekLit:tlg0033.tlg002
   type: w
 Rand der Möglichkeit:
+  parent: Möglichkeit
   references:
     GA 29/30:
     - start: 257
@@ -4657,11 +4678,14 @@ Spiel:
     - start: 168
     - start: 169
 Spiel der Tiere:
+  parent: Tier
   references:
     GA 27:
     - start: 311
     GA 29/30:
     - start: 364
+  related:
+  - Spiel
 Spiel mit der Sprache:
   references:
     GA 29/30:
@@ -4911,6 +4935,8 @@ Theologische Schriften 3, Ideen zur Gebetstheorie 3:
     - start: 150
     JPH G:
     - start: 530
+  related:
+  - Pflanze
   type: w
 Theophrastus:
   metadata:
@@ -5092,6 +5118,7 @@ Umwelt:
     - start: 48
     - start: 51
 Umwelt der Tiere:
+  parent: Tier
   references:
     GA 18:
     - start: 54
@@ -5112,6 +5139,7 @@ Umwelt der Tiere:
     - start: 384
   related:
   - von Uexküll, Jakob Johann
+  - Umwelt
 Uneigentlichkeit:
   references:
     GA 29/30:
@@ -5804,9 +5832,12 @@ Zuspruch:
     - start: 187
     - start: 188
 Zweideutigkeit der Philosophie:
+  parent: Philosophie
   references:
     GA 29/30:
     - start: 258
+  related:
+  - Zweideutigkeit des Philosophierens
 Zweideutigkeit des Philosophierens:
   parent: Philosophieren
   references:
@@ -5945,6 +5976,8 @@ das Andere:
   references:
     Vorarb29/30:
     - start: 6
+  related:
+  - ganz Andere
 das Wachsende:
   references:
     GA 29/30:
@@ -6109,12 +6142,15 @@ menschliche Dasein:
     - start: 306
     - start: 307
 menschliches Dasein:
+  parent: Dasein
   references:
     GA 22:
     - start: 311
     GA 63:
     - start: 21
     - start: 26
+  related:
+  - Mensch
 metaphysischen Begriffe:
   references:
     GA 29/30:
@@ -6359,6 +6395,8 @@ wesentliche Möglichkeit des Seins:
   references:
     GA 29/30:
     - start: 115
+  related:
+  - Möglichkeit
 Äther:
   references:
     G:
@@ -7212,6 +7250,8 @@ wesentliche Möglichkeit des Seins:
     GA 29/30:
     - start: 484
     - start: 490
+  related:
+  - λόγος ἀποφαντικός
 ἀρχὴ κινήσεως:
   lang: grc
   parent: κίνησις
